# langchain

doc-helper/: .gitignore  ingestion.py  main.py  pyproject.toml
doc-helper/backend/: core.py
gen-ai-langchain/: langchain.ipynb  langchain_CoT.py  langchain_ToT.py  langchain_chains.py  main.py  pyproject.toml
intro-to-vector-db/: ingestion.py  mediumblog1.txt  pyproject.toml  retrival.py
vectorstore-in-memory/: .gitignore  main.py  pyproject.toml
