[project]
name = "gen-ai-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=1.0.6",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.0.1",
    "torch>=2.9.1",
    "transformers>=4.57.1",
]
